feat: optimize free OCR accuracy with preprocessing and heuristics

--- a/requirements.txt
+++ b/requirements.txt
@@ -12,3 +12,4 @@ python-dotenv==1.0.1
 cloudinary==1.38.0
 python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
+opencv-python-headless==4.9.0.80
